# japanese-llm-ranking

./: .flake8  .gitignore  Makefile  pyproject.toml  readme.md  readme_jp.md  requirements.txt
.github/workflows/: copy_json.yml  upload_json.yml
elo/: Chatbot_Arena_Elo_Ratings_Calculation_(May_1,_2023).ipynb  elo.py  elo_refactor.py  eval_gpt_review.py  eval_gpt_review.sh  get_gpt_qa.py  get_gpt_qa.sh  get_model_oa_llama-retoken-alpaca.sh  get_model_qa.py  get_model_qa_llama-retoken-alpaca.sh  get_model_qa_rinna-3.6b-ppo.sh  registry.py  reviewer_gpt.py  rinna-conversation_config.json  rinna_test.ipynb  utils.py  vizualization.ipynb
elo/configs/: alpaca_short_jp-conversation_config.json  stormy-conversation_config.json
elo/helper/: generate_ja_oa_dataset.ipynb  remove_ensure_ascii.py
elo/jobs/: eval_gpt_review.sh  get_gpt_qa.sh  (+3 more)
eval/: get_gpt_oa.py  get_gpt_qa.py  get_model_oa.py  get_model_oa_rinna-3.6b-ppo.sh  get_model_qa.py  get_model_qa_gpt4alpaca.sh  get_model_qa_stormy-7b.sh
fastchat/: conversation.py
jrank/: adapters.py  bradley-terry.ipynb  bradley-terry.py  check_reviewer_agreement.py  commandlist.sh  common.py  config.json.example  convert_table.py  gen_api_answer.py  gen_api_model_answer.py  gen_judgment.py  gen_local_model_answer.py  gen_model_answer.py  generate_answers.py  get_gpt_qa.py  get_model_qa.py  get_super-torin_qa.py  helper_api.py  helper_judge.py  helper_local_model.py  make_ranking.py  matchmaker.py  mle.ipynb  overplot_rankings.py  ranking.csv  registry.py  reviewer_gpt.py  streamline.py  utils.py  vizualization.ipynb
(+156 files in other folders)
