[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "japanese-llm-ranking"
version = "0.0.1"
authors = [{name="Sam Passaglia"}]
description = "An open benchmarking suite for Japanese large language models."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/yuzuai/japanese-llm-ranking"
"Bug Tracker" = "https://github.com/yuzuai/japanese-llm-ranking/issues"

dynamic = ["dependencies"]

# iSort
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
# virtual_env = "venv"

# Black formatting
[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
    /(
      .eggs         # exclude a few common directories
    | .git          # in the root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | data 
    | jobs
    | checkpoints
    | _build
    | buck-out
    | build
    | dist
  )/
  '''

